# gost-ocr

./: .gitignore  DON'T_TOUCH_THIS.py  README.md  pyproject.toml  РТ!.ipynb
Papers/: Gemini.md  Otchyot.docx  Overview.md  Qwen.md  Report.md  TECH_SPEC.md  ИМО_Титул_Практика_Метрогипротранс_2_курс 1.docx
data/: 1680424445_malojetazhnoe-zdanie.rar  1714307579_chertezhi-i-pojasnilka.rar  1732733243_727-200-gs-a1.rar  1744740295_nasos-jecn-325.rar  1756912053_shtucer.rar  1761283876_dm.rar  freonovyj-kozhuhotrubnyj-isparitel.rar  teploobmennik-v-besplatno.rar
output/: 1744960646_nasos-jecn-325_output.json  1757253748_shtucer_deskewed_output.json  1757253748_shtucer_output.json  1760763253_shema-stropilnoj-sistemy_deskewed_output.json  1760763253_shema-stropilnoj-sistemy_output.json  1760763297_uzly-1-2-3-4-5_output.json  1761739613_reduktor-chervjachnyj_-vid-obschij_deskewed_output.json  1761739613_reduktor-chervjachnyj_-vid-obschij_output.json  1761739631_venec-chervjachnogo-kolesa_output.json  1761739667_uzel-val-koleso_output.json  1761739668_vedomyj-val_deskewed_output.json  1761739668_vedomyj-val_output.json  1_output.json  2_deskewed_output.json  2_output.json
src/: config.py  main.py
src/classification/: classify_doc.py
src/extraction/: extract_meta.py
src/gost_ocr/: __init__.py  cli.py  config.py  extraction.py  localization.py  preprocessing.py
src/gost_ocr/tests/: manual_deskew.py
src/gost_ocr/tests/test_images/TODO-cad-to-image-conversion/: 1 Генплан.dwg  11 Узлы.dwg  (+13 more)
src/localization/: locate_stamp.py
src/segmentation/: segment_cells.py
(+12 files in other folders)
